--- a/copier.yml
+++ b/copier.yml
@@ -26,5 +26,7 @@ _tasks:
   ]
     when: "{{ code_license_id == '' }}"
   - ["git", "add", "--update"]
+  - ["uvx", "--from", "rust-just", "just", "autofix"]
+  - ["git", "add", "--update"]
   - ["git", "commit", "--message", "feat: ✨ add CodeCov integration"]
   - ["git", "push"]
